public/styles.css
/* Constants */

:root {
    --icon-size: 24px;
    --primary-color: #4285f4;
    --paired-device-color: #00a69c;
    --peer-width: 120px;
    color-scheme: light dark;
}

/* Layout */

html,
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    width: 100vw;
    overflow-x: hidden;
    overscroll-behavior: none;
    overflow-y: hidden;
}

body {
    height: 100%;
    /* mobile viewport bug fix */
    min-height: -moz-available;          /* WebKit-based browsers will ignore this. */
    min-height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
    min-height: fill-available;
}

html {
    height: 100%;
    min-height: -moz-available;          /* WebKit-based browsers will ignore this. */
    min-height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
    min-height: fill-available;
}

.row-reverse {
    display: flex;
    flex-direction: row-reverse;
}

.space-between {
    justify-content: space-between;
}

.row {
    display: flex;
    justify-content: center;
    flex-direction: row;
}

.column {
    display: flex;
    flex-direction: column;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.grow {
    flex-grow: 1;
}

.full {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

header {
    position: relative;
    height: 56px;
    align-items: center;
    padding: 16px;
    box-sizing: border-box;
}

[hidden] {
    display: none !important;
}


/* Typography */

body {
    font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1 {
    font-size: 34px;
    font-weight: 400;
    letter-spacing: -.01em;
    line-height: 40px;
    margin: 8px 0 0;
}

h2 {
    font-size: 24px;
    font-weight: 400;
    letter-spacing: -.012em;
    line-height: 32px;
    color: var(--primary-color);}

h3 {
    font-size: 20px;
    font-weight: 500;
    margin: 16px 0;
    color: var(--primary-color);
}

.font-subheading {
    font-size: 14px;
    font-weight: 400;
    line-height: 18px;
    word-break: normal;
}

.text-center {
    text-align: center;
}

.font-body1,
body {
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
}

.font-body2 {
    font-size: 12px;
    line-height: 18px;
}

a {
    text-decoration: none;
    color: currentColor;
    cursor: pointer;
}

hr {
    color: white;
}

x-noscript {
    background: var(--primary-color);
    color: white;
    z-index: 2;
}


/* Icons */

.icon {
    width: var(--icon-size);
    height: var(--icon-size);
    fill: currentColor;
}



/* Shadows */

[shadow="1"] {
    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
        0 1px 8px 0 rgba(0, 0, 0, 0.12),
        0 3px 3px -2px rgba(0, 0, 0, 0.4);
}

[shadow="2"] {
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
        0 1px 10px 0 rgba(0, 0, 0, 0.12),
        0 2px 4px -1px rgba(0, 0, 0, 0.4);
}




/* Animations */

@keyframes fade-in {
    0% {
        opacity: 0;
    }
}

/* Main Header */

body>header a {
    margin-left: 8px;
}

#center {
    position: relative;
    display: flex;
    flex-direction: column-reverse;
    flex-grow: 1;
    --footer-height: 132px;
    max-height: calc(100vh - 56px - var(--footer-height));
    justify-content: space-around;
    align-items: center;
    overflow-x: hidden;
    overflow-y: scroll;
    overscroll-behavior-x: none;
}

@media screen and (max-width: 425px) {
    header:has(#clear-pair-devices:not([hidden]))~#center {
        --footer-height: 150px;
    }
}

/* Peers List */

#x-peers-filler {
    display: flex;
    flex-grow: 1;
}

x-peers {
    position: relative;
    display: flex;
    flex-flow: row wrap;
    flex-grow: 1;
    align-items: start !important;
    justify-content: center;

    z-index: 2;
    transition: --bg-color 0.5s ease;
    overflow-y: scroll;
    overflow-x: hidden;
    overscroll-behavior-x: none;
    scrollbar-width: none;

    --peers-per-row: 6; /* default if browser does not support :has selector */
    --x-peers-width: min(100vw, calc(var(--peers-per-row) * (var(--peer-width) + 25px) - 16px));
    width: var(--x-peers-width);
    margin-right: 20px;
    margin-left: 20px;
}

x-peers.overflowing {
    background: /* Shadow covers */ linear-gradient(rgb(var(--bg-color)) 30%, rgba(var(--bg-color), 0)),
    linear-gradient(rgba(var(--bg-color), 0), rgb(var(--bg-color)) 70%) 0 100%,
        /* Shadows */ radial-gradient(farthest-side at 50% 0, rgba(var(--text-color), .2), rgba(var(--text-color), 0)),
    radial-gradient(farthest-side at 50% 100%, rgba(var(--text-color), .2), rgba(var(--text-color), 0)) 0 100%;

    background-repeat: no-repeat;
    background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;

    /* Opera doesn't support this in the shorthand */
    background-attachment: local, local, scroll, scroll;
}

x-peers:has(> x-peer) {
    --peers-per-row: 10;
}

@media screen and (min-height: 505px) and (max-height: 649px) and (max-width: 426px),
screen and (min-height: 486px) and (max-height: 631px) and (min-width: 426px) {
    x-peers:has(> x-peer) {
        --peers-per-row: 3;
    }

    x-peers:has(> x-peer:nth-of-type(7)) {
        --peers-per-row: 4;
    }

    x-peers:has(> x-peer:nth-of-type(10)) {
        --peers-per-row: 5;
    }

    x-peers:has(> x-peer:nth-of-type(13)) {
        --peers-per-row: 6;
    }

    x-peers:has(> x-peer:nth-of-type(16)) {
        --peers-per-row: 7;
    }

    x-peers:has(> x-peer:nth-of-type(19)) {
        --peers-per-row: 8;
    }

    x-peers:has(> x-peer:nth-of-type(22)) {
        --peers-per-row: 9;
    }

    x-peers:has(> x-peer:nth-of-type(25)) {
        --peers-per-row: 10;
    }
}
/* ... */

